load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "JDK8_JVM_OPTS", "default_java_toolchain")

java_binary(
    name = "puml",
    main_class = "lyang.puml.PumlApplication",
    runtime_deps = ["//src/main/java/lyang/puml"],
)

container_image(
    name = "puml-image",
    base = "@java-base//image",
    cmd = [
        "server",
        "config.yaml",
    ],
    directory = "/app",
    entrypoint = [
        "./app.sh",
    ],
    files = [
        ":app.sh",
        ":config.yaml",
        ":puml",
        ":puml_deploy.jar",
    ],
    ports = [
        "8080",
        "8081",
    ],
    repository = "puml",
    stamp = True,
    workdir = "/app",
)

container_push(
    name = "puml-image-push",
    format = "Docker",
    image = ":puml-image",
    registry = "index.docker.io",
    repository = "linyang1218/puml",
    tag = "{STABLE_BUILD_REVISION}",
)
