java_library(
    name = "puml",
    srcs = glob(["*.java"]),
    javacopts = ["-Werror"],
    resources = ["//src/main/resources"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/lyang/puml/resources",
        "//third-party/generated/deps/io/dropwizard:dropwizard_core",
    ],
)
