java_library(
    name = "puml",
    srcs = glob(["*.java"]),
    javacopts = ["-Werror"],
    resources = ["//src/main/resources"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/lyang/puml/configurations",
        "//src/main/java/lyang/puml/resources",
        "//src/main/java/lyang/puml/utils",
        "//third-party/generated/deps/com/squareup/okhttp3:okhttp",
        "//third-party/generated/deps/io/dropwizard:dropwizard_core",
        "//third-party/generated/deps/javax/xml/bind:jaxb_api",
        "//third-party/generated/deps/ru/vyarus:dropwizard_guicey",
    ],
)
