java_library(
    name = "utils",
    srcs = glob(["*.java"]),
    javacopts = ["-Werror"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/lyang/puml/configurations",
        "//third-party/generated/deps/com/squareup/okhttp3:okhttp",
        "//third-party/generated/deps/javax/ws/rs:javax_ws_rs_api",
        "//third-party/generated/deps/net/sourceforge/plantuml",
        "//third-party/generated/deps/org/slf4j:slf4j_api"
    ],
)
